2002-04-17  Rachel Hestilow  <hestilow@ximian.com>

	* GNOME_SettingsDaemon.server.in: s/gnome2/gnome

Tue Apr 16 17:09:02 2002  Jonathan Blandford  <jrb@redhat.com>

	* factory.c (main): Patch from Akira Tagoh <tagoh@gnome-db.org> to
	change the restart command from gnome2-settings-daemon to
	gnome-settings-daemon.

2002-04-11  jacob berkman  <jacob@ximian.com>

	* gnome-settings-accessibility-keyboard.c: only do xkb calls if
	xkb is present (better fix for previous commit)

2002-04-11  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) : be
	  even more anal.

2002-04-10  Jody Goldberg <jody@gnome.org>

	* Makefile.am (gnome_settings_daemon_LDADD) : remove XF86MISC_LIBS

2002-04-01  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=77203
	* gnome-settings-accessibility-keyboard.c (set_gconf_from_server) : be
	  more anal about server failure.
	(set_server_from_gconf) : ditto.

2002-03-30  Jody Goldberg <jody@gnome.org>

	* gnome-settings-xsettings.c (translations) : reorder to match gdk.
	  This simplifies maintenance.

Tue Apr  9 11:58:10 2002  Jonathan Blandford  <jrb@gnome.org>

	* Makefile.am: Add commented out disk support until I finish the code.

2002-04-04  jacob berkman  <jacob@ximian.com>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf):
	prefer gdk_flush() to XFlush() (fixes bug #77208)

2002-03-29  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c
	(gnome_settings_accessibility_keyboard_init) : get really anal about
	  potential X errors.
	(set_gconf_from_server) : ditto.

2002-03-29  Jody Goldberg <jody@gnome.org>

	* gnome-settings-accessibility-keyboard.c (set_server_from_gconf) :
	  Add a gdk_error_trap just in case.

	* gnome-settings-keyboard.c (apply_settings) : don't init things to
	  bogus values unless it is ncessary.  Add a gdk_error_trap around the
	  X settings to avoid causing the server to exit if something goes